--- a/04_DOM/06_DOM_Challenge_1-5/challenge-2/index.html
+++ b/04_DOM/06_DOM_Challenge_1-5/challenge-2/index.html
@@ -10,11 +10,11 @@
     <p>Click a button to change the text color:</p>
 
     <div class="color-buttons">
-      <button id="redButton">Red</button>
-      <button id="greenButton">Green</button>
-      <button id="blueButton">Blue</button>
-      <button id="purpleButton">Purple</button>
-      <button id="resetButton">Reset</button>
+      <button class="color-btn" id="redButton">Red</button>
+      <button class="color-btn" id="greenButton">Green</button>
+      <button class="color-btn" id="blueButton">Blue</button>
+      <button class="color-btn" id="purpleButton">Purple</button>
+      <button class="color-btn" id="resetButton">Reset</button>
     </div>
 
     <script src="app.js"></script>
