--- a/04_DOM/06_DOM_Challenge_1-5/challenge-3/index.html
+++ b/04_DOM/06_DOM_Challenge_1-5/challenge-3/index.html
@@ -13,12 +13,12 @@
     <div class="form-container">
       <div class="form-group">
         <label for="nameInput">Name:</label>
-        <input type="text" id="nameInput" placeholder="Enter your name" />
+        <input type="text" id="nameInput" class="input" placeholder="Enter your name" />
       </div>
 
       <div class="form-group">
         <label for="jobInput">Job Title:</label>
-        <input type="text" id="jobInput" placeholder="Enter your job title" />
+        <input type="text" class="input" id="jobInput" placeholder="Enter your job title" />
       </div>
 
       <div class="form-group">
@@ -26,6 +26,7 @@
         <input
           type="number"
           id="ageInput"
+          class="input"
           min="18"
           max="120"
           placeholder="Enter your age"
@@ -36,6 +37,7 @@
         <label for="bioInput">Bio:</label>
         <textarea
           id="bioInput"
+          class="input"
           rows="4"
           placeholder="Tell us about yourself"
         ></textarea>
