--- a/04_DOM/07_DOM_Challenge_6-10/challenge-9/index.html
+++ b/04_DOM/07_DOM_Challenge_6-10/challenge-9/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="content">
       <h1>Main Content</h1>
-      <button class="toggle-btn">Open Menu</button>
+      <button class="toggle-btn" onclick="openMenu()">Open Menu</button>
       <p>Click the button to open the sliding menu</p>
     </div>
 
     <div class="panel">
-      <button class="close-btn">X</button>
+      <button class="close-btn" onclick="closeMenu()">X</button>
       <h2>Menu Items</h2>
       <div class="menu-item">Home</div>
       <div class="menu-item">About</div>
